--- a/src/style.css
+++ b/src/style.css
@@ -29,3 +29,26 @@ canvas {
   border-radius: 20px;
   border: none;
 }
+
+.htmlButton button {
+  position: absolute;
+  top: 0;
+  transform: none;
+  left: 0;
+}
+
+.htmlButton button {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  box-shadow: 1px 1px 1px black;
+  border-radius: 3px;
+  font-size: 12rem;
+  padding: 1rem 2rem;
+  pointer-events: auto;
+  cursor: pointer;
+}
+.htmlButton button:hover {
+  background-color: black;
+  color: white;
+}
